Fix overflow issues on smartphones

--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ table {
 	--footer-font-color: #1c313c7c;
 	--placeholder-text-color: #A9A9AC; /* might really benefit from thinner font family */
 	--outline: #C43B39;
+	--font-size: calc(0.75rem + 0.6vw);
+	--icon-size: calc(1.125rem + 0.6vw);
 }
 
 ::placeholder {
@@ -75,7 +77,7 @@ table {
 input, select{
 	border: 2px solid white;
 	font-family: Ostrovsky;
-	font-size: 1.5rem;
+	font-size: var(--font-size);
 	color: var(--font-and-logo-color);
 	background-color: white;
 }
@@ -87,13 +89,13 @@ input:focus, button:focus, select:focus{ /* should be in accordance with rules *
 
 h1{
 	font-family: Ostrovsky;
-	font-size: 1.5rem;
+	font-size: var(--font-size);
 	color: var(--font-and-logo-color);
 }
 
 p{
 	font-family: Ostrovsky;
-	font-size: 1.5rem;
+	font-size: var(--font-size);
 	color: var(--font-and-logo-color);
 }
 /* | body width*/
@@ -107,6 +109,7 @@ button{
 	border: none;
 	background-color: white;
 	border: 2px solid white;
+	padding: 0;
 }
 /* || header */
 /* ||| library logo */
@@ -125,25 +128,23 @@ main{
 
 /* ||| searchbar and add book */
 .searchbar-container{
-	height: 4.7vh;
 	display: flex;
 	border-bottom: solid 2px var(--font-and-logo-color);
 }
 
 .searchbar{
 	flex-grow: 1;
-	font-size: 1.5rem;
+	font-size: var(--font-size);
 }
 
 .add-book{
 	border: solid 2px var(--font-and-logo-color);
 	max-width: 1200px;
 	width: 100%;
-	height: 4.7vh;
 }
 
 .icon{
-	height: 100%;
+	height: var(--icon-size);
 }
 
 /* book styling */
@@ -153,15 +154,15 @@ main{
 
 	display: grid;
 	grid-template-columns: 1fr 2fr 1fr;
-	grid-template-rows: repeat(2, 4.7vh);
-
+	grid-template-rows: repeat(2, 1fr);
+	align-items: center;
 	grid-template-areas: 
 						'title-author title-author control-buttons'
 						'pages-number status progress';
 }
 
 .book-container p,h1{
-	line-height: 4.7vh;
+	line-height: var(--font-size);
 }
 
 .title-author{
@@ -197,7 +198,7 @@ dialog{
 .add-book-dialog > form {
 	display: flex;
 	flex-direction: column;
-	gap: 2vh;
+	gap: 0.8vw;
 }
 
 fieldset{
@@ -213,7 +214,7 @@ fieldset > input, select{
 
 label{
 	font-family: Ostrovsky;
-	font-size: 1.5rem;
+	font-size: var(--font-size);
 	color: var(--font-and-logo-color);
 }
 
